--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +15,34 @@
         android:theme="@style/Theme.AppClienteVipSqlLite"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.ModeloActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ConsultarClientesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ClientePessoaFisicaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.RecuperarSenhaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ClientePessoaJuridicaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ClienteVipActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.CredencialDeAcessoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
