Criando a activity AtualizarMeusDados e o seu layout.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.AppClienteVipSqlLite"
         tools:targetApi="31">
         <activity
+            android:name=".view.AtualizarMeusDadosActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.MeusDadosActivity"
             android:exported="false" />
         <activity
